# qcl

./: Cargo.toml  README.md
crates/interface/: Cargo.toml
crates/interface/src/: cli.rs  lib.rs  tui.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: lib.rs  provider.rs  resolver.rs
crates/snippet/: Cargo.toml
crates/snippet/src/: lib.rs  loader.rs  model.rs  parser.rs
docs/ja/: README.md  qcl-app_design.md  qcl_architecture_design.md  qcl_interface_design.md  qcl_resolve_design.md  qcl_snippet_design.md  qcl_snippet_patterns.md
qcl-app/: Cargo.toml
qcl-app/src/: cli.rs  logger.rs  main.rs  tui.rs
sample/: snippets.yaml
shell/: keybinding.bash
src/: main.rs  model.rs  placeholder.rs  snippet_loader.rs  ui.rs
